@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.8-2
-Date: 2011-10-31
+Date: 2011-11-01
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
